--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,5 @@
+<script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+
 {% if client_list %}
     <select name="client">
     {% for Client in client_list %}
@@ -7,3 +9,15 @@
 {% else %}
     <p>Aucun client défini.</p>
 {% endif %}
+<div></div>
+<script>
+$( "select" )
+  .change(function () {
+    var str = "";
+    $( "select option:selected" ).each(function() {
+      str += $( this ).text() + " ";
+    });
+    $( "div" ).text( str );
+  })
+  .change();
+</script>
