--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@ $( "select" )
   .change(function () {
     var str = "";
     $( "select option:selected" ).each(function() {
-      str += $( this ).text() + " ";
+      str += $( this ).val() + ":" + $( this ).text() + "<p>";
     });
     $( "div" ).text( str );
   })
