--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@ $( "select" )
     //alert("Acces a: " + json_url);
     $.getJSON(json_url, function( data ) {
       $.each( data, function( key, domaine ) {
-        console.log("key = " + key + " domaine = " + domaine.nom_domaine);
+        console.log("key = " + key + " id = " + domain.id + " domaine = " + domaine.nom_domaine);
         str += domaine.id + ":" + domaine.nom_domaine + "\n";
       });
     });
