--- a/templates/index.html
+++ b/templates/index.html
@@ -28,6 +28,7 @@ $( "select" )
         str += domaine.id + ":" + domaine.nom_domaine + "\n";
       });
     });
+    console.log(str);
     $( "div" ).text( str );
   });
 //  .change();
