--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 
 {% if client_list %}
-    <select name="client">
+    <select id="selclient" name="client">
     {% for Client in client_list %}
         <option value="{{ Client.id }}">{{ Client.nom_client }}</option>
     {% endfor %}
@@ -11,7 +11,7 @@
 {% endif %}
 <div></div>
 <script>
-$( "select" )
+$( "#selclient" )
   .change(function () {
     var str = "";
     var client = "";
