Quelques tests avec div

--- a/templates/index.html
+++ b/templates/index.html
@@ -42,7 +42,7 @@ $( "#selclient" )
         $('#seldomaine').append('<option value="' + domaine.id + '">' + domaine.nom_domaine + '</option>');
       });
       console.log(str);
-      $( "#divout" ).append( '<p>Résultats:</p> );
+      $( "#divout" ).append( '<p>Résultats:</p>' );
     });
    });
 $( "#selclient" ).change();
