Quelques tests avec div

--- a/templates/index.html
+++ b/templates/index.html
@@ -21,6 +21,7 @@ Domaine: <select id="seldomaine" name="domaine"></select>
 <select id="termeAn" name="TermeAnglais" size=6 style="width: 200px;">
 </p>
 
+<p>Résultats:</p>
 <div id="divout"></div>
 
 <script>
@@ -43,7 +44,6 @@ $( "#selclient" )
         $('#seldomaine').append('<option value="' + domaine.id + '">' + domaine.nom_domaine + '</option>');
       });
       console.log(str);
-      var lres = $('<p>Résultats:</p>');
       $( "#divout" ).append( lres );
     });
    });
