Quelques tests avec div

--- a/templates/index.html
+++ b/templates/index.html
@@ -22,8 +22,8 @@ Domaine: <select id="seldomaine" name="domaine"></select>
 </p>
 
 <p>Résultats:</p>
-<div id="divout"></div>
-
+<div id="divout">divout</div>
+ 
 <script>
 $( "#selclient" )
   .change(function () {
